5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4125/executions/1709_3033.log
== TEST (2019-05-02 11:38:31) 
-- CODE:
x = float(input("digite x: "))

if(x<0)and(x>-100):
	fx= -1/x
	print(round(fx,4))
elif(x>0)and(x<=100):
	fx = 1/x
	print(round(fx,4))
elif(x=0)or(x>100)or(x<-100):
	print("entrada invalida")
-- ERROR:
File "XXXX", line 9
    elif(x=0)or(x>100)or(x<-100):
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:39:26) 
-- CODE:
x = float(input("digite x: "))

if(x<0)and(x>-100):
	fx= -1/x
	print(round(fx,4))
elif(x>0)and(x<=100):
	fx = 1/x
	print(round(fx,4))
elif(x=0)or(x>100)or(x<-100):
	print("entrada invalida")
-- ERROR:
File "XXXX", line 9
    elif(x=0)or(x>100)or(x<-100):
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:40:52) 
-- CODE:
x = float(input("digite x: "))

if(x<0)and(x>-100):
	fx= -1/x
	print(round(fx,4))
elif(x>0)and(x<=100):
	fx = 1/x
	print(round(fx,4))
else:
	print("entrada invalida")
-- OUTPUT:
0.0109
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:40:56) 
-- CODE:
x = float(input("digite x: "))

if(x<0)and(x>-100):
	fx= -1/x
	print(round(fx,4))
elif(x>0)and(x<=100):
	fx = 1/x
	print(round(fx,4))
else:
	print("entrada invalida")
-- OUTPUT:
0.0109
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:41:00) 
-- CODE:
x = float(input("digite x: "))

if(x<0)and(x>-100):
	fx= -1/x
	print(round(fx,4))
elif(x>0)and(x<=100):
	fx = 1/x
	print(round(fx,4))
else:
	print("entrada invalida")
-- OUTPUT:
0.0109
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 11:41:07) 
-- CODE:
x = float(input("digite x: "))

if(x<0)and(x>-100):
	fx= -1/x
	print(round(fx,4))
elif(x>0)and(x<=100):
	fx = 1/x
	print(round(fx,4))
else:
	print("entrada invalida")
-- EXECUTION TIME:
0.161448
-- TEST CASE 1:
---- input:
92.0
---- correct output:
0.0109
---- user output:
0.0109
-- TEST CASE 2:
---- input:
-55.25
---- correct output:
0.0181
---- user output:
0.0181
-- TEST CASE 3:
---- input:
0.025
---- correct output:
40.0
---- user output:
40.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
